app/src/main/java/com/example/fitnesstracker/presentation/auth/error/Unknown.java
package com.example.fitnesstracker.presentation.auth.error;

public final class Unknown implements AuthError {}
